--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>title</title>
+    <title>Turner HVAC</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
   </head>
