--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Turner HVAC</title>
+    <title>DesertStar HVAC</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
   </head>
@@ -10,11 +10,10 @@
 
 
     <header class="site-header">
-      <img class=logo src="#" alt="Logo" />
-      <h1>Turner HVAC</h1>
+      <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
       <div class="contact-info">
-        <a href="mailto:info@turnerhvac.com">info@turnerhvac.com</a>
-        <a href="tel:1234567890">123-456-7890</a>
+        <a href="tel:8018981448">801-898-1448</a>
+        <a href="mailto:info@turnerhvac.com">info@desertstarhvac.com</a>
       </div>
       <nav></nav>
     </header>
@@ -25,20 +24,20 @@
 
       <section class="banners">
         <article class="banner">
-          <h1>Banner 1 Title</h1>
-          <img src="#" alt="Banner 1 Title" />
+          <h1>Excellent Service</h1>
+          <img src="img/staff.jpg" alt="Desert Star HVAC Staff" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
         </article>
 
         <article class="banner">
-          <h1>Banner 2 Title</h1>
-          <img src="#" alt="Banner 2 Title" />
+          <h1>Beat the Summer Heat</h1>
+          <img src="http://i.istockimg.com/file_thumbview_approve/25572542/2/stock-photo-25572542-heatwave-in-the-city-and-hand-showing-thermometer.jpg" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
         </article>
 
         <article class="banner">
-          <h1>Banner 3 Title</h1>
-          <img src="#" alt="Banner 3 Title" />
+          <h1>Kill the Winter Chill</h1>
+          <img src="http://i.istockimg.com/file_thumbview_approve/32712688/2/stock-photo-32712688-extreme-winter-ahead-road-warning-sign.jpg" alt="Extreme winter ahead" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
         </article>
       </section>
@@ -48,23 +47,29 @@
       <section class="services">
         <article class="service">
           <h1>Heating</h1>
-          <img src="#" alt="Heating" />
+          <img src="http://i.istockimg.com/file_thumbview_approve/919977/2/stock-photo-919977-gas-energy-flames.jpg" alt="Heating" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
         </article>
 
         <article class="service">
           <h1>Cooling</h1>
-          <img src="#" alt="Cooling" />
+          <img src="http://i.istockimg.com/file_thumbview_approve/20142754/2/stock-photo-20142754-air-conditioner.jpg" alt="Cooling" />
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
         </article>
       </section>
 
     </div>
-    
 
 
-    <footer class="site-footer"> </footer>
-  
+
+    <footer class="site-footer">
+      <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
+      <div class="contact-info">
+        <a href="tel:8018981448">801-898-1448</a>
+        <a href="mailto:info@turnerhvac.com">info@desertstarhvac.com</a>
+      </div>
+    </footer>
+
 
   </body>
 </html>
