--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>DesertStar HVAC</title>
     <link rel="stylesheet" href="styles.css">
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
