added homepage promo and styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
       <div class="contact-info">
         <a href="tel:8018981448">801-898-1448</a>
-        <a href="mailto:info@turnerhvac.com">info@desertstarhvac.com</a>
+        <a href="tel:4358434333">435-843-4333</a>
+        <a href="mailto:info@turnerhvac.com">desertstar1991@gmail.com</a>
       </div>
       <nav></nav>
     </header>
@@ -24,6 +25,15 @@
 
     <div class="page-content page-wrap">
 
+      <a class="promo" href="tel:8018981448">
+        <span class="header">Call Us Now!</span>
+        <span class="body">
+          <span class="price">$59.99</span>
+          <span class="service">Tune-Up Special</span>
+        </span>
+        <span class="footer">801-898-1448</span>
+      </a>
+      
       <section class="banners group">
         <article class="banner active">
           <h1>Excellent Service</h1>
@@ -44,22 +54,6 @@
         </article>
       </section>
 
-
-
-      <!--<section class="services">
-        <article class="service">
-          <h1>Heating</h1>
-          <img src="http://i.istockimg.com/file_thumbview_approve/919977/2/stock-photo-919977-gas-energy-flames.jpg" alt="Heating" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
-        </article>
-
-        <article class="service">
-          <h1>Cooling</h1>
-          <img src="http://i.istockimg.com/file_thumbview_approve/20142754/2/stock-photo-20142754-air-conditioner.jpg" alt="Cooling" />
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed erat urna. Fusce ac purus rutrum libero vulputate laoreet. Duis vulputate purus eu sapien sodales, vel varius arcu fermentum.</p>
-        </article>
-      </section>-->
-
     </div>
 
 
@@ -68,7 +62,8 @@
       <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
       <div class="contact-info">
         <a href="tel:8018981448">801-898-1448</a>
-        <a href="mailto:info@turnerhvac.com">info@desertstarhvac.com</a>
+        <a href="tel:4358434333">435-843-4333</a>
+        <a href="mailto:info@turnerhvac.com">desertstar1991@gmail.com</a>
         <a href="https://www.facebook.com/desertstarheatingandair">Contact us on Facebook!</a>
       </div>
     </footer>
