Finish layout for new promo section.

--- a/index.html
+++ b/index.html
@@ -12,28 +12,31 @@
 
 
     <header class="site-header">
-      <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
-      <div class="contact-info">
-        <a href="tel:8018981448">801-898-1448</a>
-        <a href="tel:4358434333">435-843-4333</a>
-        <a href="mailto:info@turnerhvac.com">desertstar1991@gmail.com</a>
+      <div class="page-wrap">
+        <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
+
+        <div class="contact-info">
+          <a href="tel:8018981448">SLC 801-898-1448</a>
+          <a href="tel:4358434333">Toole 435-843-4333</a>
+          <a href="tel:8014852083">Fax 801-485-2083</span>
+          <a href="mailto:info@turnerhvac.com">desertstar1991@gmail.com</a>
+        </div>
+
+        <a class="promo" href="tel:8018981448">
+          <span class="header">Call Us Now!</span>
+          <span class="body">
+            <span class="price">$59.99</span>
+            <span class="service">Tune-Up Special</span>
+          </span>
+          <span class="footer">801-898-1448</span>
+        </a>
       </div>
-      <nav></nav>
     </header>
 
 
 
     <div class="page-content page-wrap">
 
-      <a class="promo" href="tel:8018981448">
-        <span class="header">Call Us Now!</span>
-        <span class="body">
-          <span class="price">$59.99</span>
-          <span class="service">Tune-Up Special</span>
-        </span>
-        <span class="footer">801-898-1448</span>
-      </a>
-      
       <section class="banners group">
         <article class="banner active">
           <h1>Excellent Service</h1>
@@ -72,7 +75,7 @@
     <script>
     $(function () {
       var banners = Banners('.banners');
-      banners.auto(5);  
+      banners.auto(5);
     });
     </script>
 
