--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
 
     <footer class="site-footer">
+      <p>Residential - Commercial - Swamp Cooler - Change outs - HVAC</p>
       <img class=logo src="img/desertstarhvac_logo.svg" alt="Dessert Star HVAC" />
       <div class="contact-info">
         <a href="tel:8018981448">801-898-1448</a>
